RESOLVED FIXED208273
MediaResourceLoader objects are leaking on reddit.com
https://bugs.webkit.org/show_bug.cgi?id=208273
Summary MediaResourceLoader objects are leaking on reddit.com
Chris Dumez
Reported 2020-02-26 15:56:11 PST
Steps to reproduce: 1. Adding logging in MediaResourceLoader constructor / destructor (ideally with a static count) 2. Go to reddit.com and scroll down for a while -> Notice that we keep constructing MediaResourceLoader objects but that they are never destroyed 3. Navigate tab to about:blank (tab keeps using the same process) 4. Send a memory pressure signal: notifyutil -p org.WebKit.lowMemory -> Notice that the MediaResourceLoader still do not get destroyed.
Attachments
Logging patch to demonstrate leak (933 bytes, patch)
2020-02-26 15:56 PST, Chris Dumez
no flags
Memgraph (1009.44 KB, application/octet-stream)
2020-02-26 15:57 PST, Chris Dumez
no flags
Patch (3.11 KB, patch)
2020-02-26 19:31 PST, Peng Liu
no flags
Chris Dumez
Comment 1 2020-02-26 15:56:37 PST
Created attachment 391794 [details] Logging patch to demonstrate leak
Chris Dumez
Comment 2 2020-02-26 15:57:04 PST
Created attachment 391795 [details] Memgraph
Peng Liu
Comment 3 2020-02-26 19:31:56 PST
Chris Dumez
Comment 4 2020-02-27 08:30:44 PST
(In reply to Peng Liu from comment #3) > Created attachment 391833 [details] > Patch Thanks for fixing!
Radar WebKit Bug Importer
Comment 5 2020-02-27 11:19:57 PST
WebKit Commit Bot
Comment 6 2020-02-27 12:12:41 PST
Comment on attachment 391833 [details] Patch Clearing flags on attachment: 391833 Committed r257581: <https://trac.webkit.org/changeset/257581>
WebKit Commit Bot
Comment 7 2020-02-27 12:12:42 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.