MediaResourceLoader objects are leaking on reddit.com https://bugs.webkit.org/show_bug.cgi?id=208273

Reviewed by Jer Noble.

We retain the WebCoreNSURLSession delegate. There will be a retain cycle
if that delegate retains the session. This patch fixes the retain cycle problem
by referencing the delegate with a weak pointer.

Manually tested.

* platform/network/cocoa/WebCoreNSURLSession.h:
* platform/network/cocoa/WebCoreNSURLSession.mm:
(-[WebCoreNSURLSession delegate]):


Canonical link: https://commits.webkit.org/221255@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@257581 268f45cc-cd09-0410-ab3c-d52691b4dbfc